--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "author": "",
   "license": "ISC",
-  "homepage": "https://Git-Me-Josh.github.io/wob",
+  "homepage": "westernoregonbotanicals.com",
   "devDependencies": {
     "gh-pages": "^2.2.0"
   }
